crates/cli/tests/snapshots/lib__check@unknown_module.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/unknown_module.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/unknown_module.nemo
---
success: false
exit_code: 1
----- stdout -----
[Parsing error] Error: Unknown module 'unknown'
   ╭─[ tests/check/unknown_module.nemo:4:5 ]
   │
 4 │ use unknown
   │     ───┬───  
   │        ╰───── Unknown module 'unknown'
───╯



----- stderr -----
Error: "Check failed with 1 errors"
